adding testnet link

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -29,6 +29,11 @@ During the Testnet, expect frequent updates which could result in API and Faucet
 
 Ready to deploy a Validator to the Testnet ? The [complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) will walk you through the entire process.
 
+## Validator Explorer
+
+There is [a new Explorer for Validators](https://explorer.helium.wtf/validators) being developed by Helium and the Community.
+
+
 ## Validator Resources 
 
 To run a Testnet Validator node refer to the following:
