--- a/docs/use-the-network/devices/ready-to-use/adeunis-field-test-device.mdx
+++ b/docs/use-the-network/devices/ready-to-use/adeunis-field-test-device.mdx
@@ -33,7 +33,7 @@ positions to verify that devices will have coverage.
 
 To start, you'll need to add your device to Console. You should have been
 provided with a DevEUI, AppEUI, and AppKey from the seller of the device.
-[//]: # Follow our quickstart for instructions on how to add a new device to
+Follow our [quickstart](/use-the-network/console/quickstart) for instructions on how to add a new device to
 Console.
 
 ### Device Configuration
