--- a/docs/use-the-network/console/troubleshooting.mdx
+++ b/docs/use-the-network/console/troubleshooting.mdx
@@ -1,6 +1,7 @@
 ---
 id: troubleshooting
 hide_title: true
+title: Console Troubleshooting
 sidebar_label: Troubleshooting
 slug: /use-the-network/console/troubleshooting
 ---
@@ -31,14 +32,13 @@ on the right hand side. The Decoder Function can be written using custom
 JavaScript code provided by the user or selected from prebuilt decoders
 (currently Browan Object Locator and Cayenne LPP). Once the function has been
 created it will need to be attached to a Label or Integration. This Label that
-attaches to the device must also be applied to the device. Please see attached
-link for more information on creating a Function.
-https://docs.helium.com/use-the-network/console/functions/
+attaches to the device must also be applied to the device. Please see 
+[complete Function documentation for more information](/use-the-network/console/functions/).
 
 ### How do I manage my Hotspots on Console?
 
-Hotspots can’t be managed or connected on Console, you will need to use the
-Helium app to manage your Hotspots.
+Currently Hotspots can’t be managed or connected on Console. You will need to 
+use the Helium Mobile app to manage your Hotspots.
 
 ### What does it mean when my label is greyed out?
 
