--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -33,7 +33,7 @@ At any time use ```-h``` or ```--help``` to get more help for a command.
 #### Create a Wallet in a non-interactive / DevOps way
 
 ```
-./helium-wallet create basic --network testnet
+HELIUM_WALLET_PASSWORD="My Password" ./helium-wallet create basic --network testnet
 ``` 
 
 
