--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -30,7 +30,7 @@ At any time use ```-h``` or ```--help``` to get more help for a command.
 
 ```./helium-wallet create basic --network testnet``` 
 
-#### Create a Wallet in a non-interactive / DevOps way
+#### Create or Use Wallet without Password Input
 
 ```
 HELIUM_WALLET_PASSWORD="My Password" ./helium-wallet create basic --network testnet
