--- a/docs/mine-hnt/validators/wallet.mdx
+++ b/docs/mine-hnt/validators/wallet.mdx
@@ -31,7 +31,7 @@ At any time use ```-h``` or ```--help``` to get more help for a command.
 ```./helium-wallet create basic --network testnet``` 
 
 #### Create or Use Wallet without Password Input
-For security reasons, it is generally recommended that you type in your password every time. Storing the password in an environmental variable makes it very easy for the password to get compromised. Sometimes though, despite the security risks, you may want to interact with the CLI without need to input the password. In this case, using the environmental variable `HELIUM_WALLET_PASSWORD` enables this.
+For security reasons, it is generally recommended that you type in your password every time. Storing the password in an environmental variable makes it very easy for the password to get compromised. Sometimes though, despite the security risks, you may want to interact with the CLI without inputting the password. In this case, using the environmental variable `HELIUM_WALLET_PASSWORD` enables this.
 ```
 HELIUM_WALLET_PASSWORD="My Password" ./helium-wallet create basic --network testnet
 ``` 
