add victor v4xx self provision for vlink

--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -16,6 +16,7 @@ Find ready to use devices or learn how to develop your own. The Helium network s
 * [Digital Matter LoRaWAN GPS](/use-the-network/devices/ready-to-use/digital-matter-lorawan-gps)
 * [Dragino LHT65](/use-the-network/devices/ready-to-use/dragino-lht65)
 * [SEEED SenseCAP](/use-the-network/devices/ready-to-use/SEEED-SenseCAP)
+* [Victor Trap V4xx](/use-the-network/devices/ready-to-use/victor-trap-v4xx)
 
 ### Development Devices
 
