bunch of styling (mainly top level pages)

--- a/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
+++ b/docs/blockchain/blockchain-primitives/blockchain-primitives.mdx
@@ -5,6 +5,10 @@ sidebar_label: Blockchain Primitives
 slug: /blockchain/blockchain-primitives
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/primitives.png")} />
+
 # Helium Blockchain Primitives
 
 Below are some of the larger components and concepts of the Helium blockchain.
