--- a/docs/lorawan-on-helium/lorawan-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-on-helium.mdx
@@ -5,6 +5,10 @@ sidebar_label: Introduction
 slug: /lorawan-on-helium
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/lorawan-on-helium/lorawanheader.png")} />
+
 # LoRaWAN On Helium
 
 The LoRaWAN Network on Helium is **compatible with all LoRaWAN devices**.
