--- a/docs/blockchain/blockchain.mdx
+++ b/docs/blockchain/blockchain.mdx
@@ -6,31 +6,47 @@ slug: /blockchain
 hide_table_of_contents: true
 ---
 
-# The Helium Blockchain
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
-The Helium Blockchain is a new blockchain built from the ground up to
-incentivize the creation of decentralized, public wireless networks. It's based
-on a new, novel work algorithm called Proof of Coverage, and rewards miners in
-$HNT, the native token of the Helium blockchain. Officially launched on July 29,
-2019, the Helium Blockchain is now running on over 10,000 Helium Miners across
-the world; and powers the largest, public, decentralized LoRaWAN Network in the
-world.
+<div class="container" style={{padding: 0, marginBottom: 60}}>
+	<div class="row">
+        <div class="col col--12">
+            <div class="flex">
+                           <img className="headericon" src={useBaseUrl("img/blockchain/blockchainicon.png")} />
+                <div className="headertext">
+                    <h1 style={{marginTop:0}}>The Helium Blockchain</h1>
+                    <h2 className="subtitle">The Helium Blockchain is a new blockchain built from the ground up to incentivize the creation of decentralized, public wireless networks.</h2>
+                    <div>
+                        <a href="/blockchain/blockchain-primitives"><span class="badge badge--secondary">Blockchain Primitives</span></a>
+                        <a href="/blockchain/mining"><span class="badge badge--secondary">Mining</span></a>
+                        <a href="/blockchain/proof-of-coverage"><span class="badge badge--secondary">Proof of Coverage</span></a>	
+                    </div>
+                </div>
+            </div>
+        </div>
+	</div>
+</div>
 
-- [Blockchain Primitives][blockchain.primitives]
-- [Mining $HNT][blockchain.mining]
-- [Proof of Coverage][blockchain.proof-of-coverage]
-- [Consensus Protocol][blockchain.consensus-protocol]
-- [The Helium Token][blockchain.helium-token]
-- [Oracles][blockchain.oracles]
-- [Transaction Fees][blockchain.transaction-fees]
-<!-- * [Chain Variables][blockchain.chain-variables] -->
 
-[blockchain.primitives]: /blockchain/blockchain-primitives
-[blockchain.mining]: /blockchain/mining
-[blockchain.proof-of-coverage]: /blockchain/proof-of-coverage
-[blockchain.consensus-protocol]: /blockchain/consensus-protocol
-[blockchain.helium-token]: /blockchain/helium-token
-[blockchain.oracles]: /blockchain/oracles
-[blockchain.transaction-fees]: /blockchain/transaction-fees
+<div class="container" style={{padding: 0}}>
+  <div class="row">
+  	<div class="col col--12">
+  		<h2>Introduction</h2>
+  	</div>
+    <div class="col col--6">
+    	<p>The Helium Blockchain is based on a new, novel work algorithm called Proof of Coverage, and rewards miners in $HNT, the native token of the Helium blockchain. Officially launched on July 29, 2019, the Helium Blockchain is now running on over 10,000 Helium Miners across the world; and powers the largest, public, decentralized LoRaWAN Network in the world.</p>
+    	<p style={{marginBottom:50}}>If you are a developer and interested in contributing, or simply just interested in learning more, join us in the #blockchain channel on <a href="https://discorg.gg/helium">our Discord</a>.</p>
+    </div>
+      <div class="col col--5 col--offset-1 "  style={{marginBottom: 100}}>
+		    <h5 style={{marginTop:0}}>Quick Links</h5>
+		    <a className="block" href="/blockchain/blockchain-primitives"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Blockchain Primitives</a>
+		    <a className="block" href="/blockchain/mining"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Mining $HNT</a>
+		    <a className="block" href="/blockchain/proof-of-coverage"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Proof of Coverage</a>
+			<a className="block" href="/blockchain/consensus-protocol"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Consensus Protocol</a>	
+			<a className="block" href="/blockchain/helium-token"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> The Helium Token ($HNT)</a>	
+			<a className="block" href="/blockchain/oracles"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Oracles</a>	
+			<a className="block" href="/blockchain/transaction-fees"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Transaction Fees</a>	
+	    </div>
+  </div>
+</div>
 
-<!-- [blockchain.chain-variables]: /blockchain/chain-variables -->
