--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -3,43 +3,89 @@ id: use-the-network
 hide_title: true
 sidebar_label: Introduction
 slug: /use-the-network
+hide_table_of_contents: true
+
 ---
 
-# Use the Helium Network
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Thousands of developers and companies rely on the Helium Network for connectivity. Ready to join them? Here's where to start. 
+
+<div class="container" style={{padding: 0, marginBottom: 60}}>
+	<div class="row">
+        <div class="col col--12">
+            <div class="flex" style={{border: 'none'}}>
+                 <img className="headericon" src={useBaseUrl("img/use-the-network/useheader.png")} />
+                <div className="headertext">
+                    <h1 style={{marginTop:0}}>Use the Helium Network</h1>
+			<h2 className="subtitle">Thousands of developers and companies rely on the Helium Network for connectivity. Ready to join them? Here's where to start.</h2>
+			<div>
+				<a href="/use-the-network/devices/ready-to-use/"><span class="badge badge--secondary">Helium-enabled Devices</span></a>
+				<a href="/use-the-network/console/quickstart"><span class="badge badge--secondary">Console Explained</span></a>
+				<a href="/use-the-network/community-projects#dashboards"><span class="badge badge--secondary">Dashboard Projects</span></a>	
+			</div>
+                </div>
+            </div>
+        </div>
+	</div>
+</div>
+
+
+
+<div style={{padding: '0px 0 50px'}}>
 
 :::info
 [Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the community. And the `#console` and `#sensor-dev`
 channels are the two most relevant for developers using the Network. 
 :::
 
-
-### Devices 
-
-* [Ready to Use](/use-the-network/devices/ready-to-use/)
-* [Development and Prototyping](/use-the-network/devices/development)
-
-### Helium Console 
-
-* [Console Quickstart](/use-the-network/console/quickstart)
-* [Adding Devices](/use-the-network/console/adding-devices)
-* [Labels](/use-the-network/console/labels)
-* [Integrations](/use-the-network/console/integrations)
-* [Console API](/use-the-network/console/api)
+</div>
 
 
-### Community Projects
+<div class="container" style={{padding: 0}}>
+	<div class="row">
+	    <div class="col col--6"  style={{marginBottom: 100}}>
+	    	<img className="homeicon" src={useBaseUrl("img/use-the-network/use1.svg")} />
+	    	<h3>Devices</h3>
+	    	<p className="podtext">Purchase and customize Helium-enabled devices or prototype and build your own.</p>
+	    	<h5>Quick Links</h5>
+	    	<a className="block" href="/use-the-network/devices/ready-to-use/"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Ready to Use</a>
+	    	<a className="block" href="/use-the-network/devices/development"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Development and Prototyping</a>
+	   
+	    </div>
+	    <div class="col col--6 " style={{marginBottom: 100}}>
+	   		<img className="homeicon" src={useBaseUrl("img/use-the-network/use2.svg")} />
+	    	<h3>Helium Console</h3>
+	    	<p className="podtext">The Helium Console is a web-based device management tool that allows developers to register, authenticate, and manage their devices on the Helium network.</p>
+	    	<a href="https://console.helium.com">Create Console Account <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+	    	<h5>Quick Links</h5>
+	    	<a className="block" href="/use-the-network/console/quickstart"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Console Quickstart</a>
+	    	<a className="block" href="/use-the-network/console/adding-devices"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Adding Devices</a>
+			<a className="block" href="/use-the-network/console/labels"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Labels</a>
+	    	<a className="block" href="/use-the-network/console/integrations"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Integrations</a>
+			<a className="block" href="/use-the-network/console/api"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Console API</a>
+	    </div>
+	    <div class="col col--6"  style={{marginBottom: 100}}>
+		    <img className="homeicon" src={useBaseUrl("img/use-the-network/use3.svg")} />
+		    <h3>Community Projects</h3>
+		    <p className="podtext">We love seeing community projects that utilise the network in clever new ways.</p>
+		    <a href="/use-the-network">Learn More <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+		    <h5>Quick Links</h5>
+		    <a className="block" href="/use-the-network/community-projects#agricultural"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Agriculture</a>
+		    <a className="block" href="/use-the-network/community-projects#dashboards"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Dashboards</a>
+		    <a className="block" href="/use-the-network/community-projects#environmental"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Environmental</a>
+	    </div>
+	    <div class="col col--6"  style={{marginBottom: 100}}>
+		    <img className="homeicon" src={useBaseUrl("img/use-the-network/use4.svg")} />
+		    <h3>Coverage Mapping</h3>
+		    <p className="podtext">Mappers is a community-led effort to actively survey the signal intensity of the Helium Network, using configured-trackers.</p>
+		    <a href="https://mappers.helium.com">See the Map <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+		    <h5>Quick Links</h5>
+		    <a className="block" href="/use-the-network/coverage-mapping"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Intro to Coverage Mappers</a>
+		    <a className="block" href="/use-the-network/coverage-mapping/mappers-quickstart"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Mappers Quickstart</a>
+		    <a className="block" href="/use-the-network/coverage-mapping/mappers-data"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Mappers Data</a>
+		    <a className="block" href="/use-the-network/coverage-mapping/mappers-api"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Mappers API</a>
+		    <a className="block" href="/use-the-network/coverage-mapping/adeunis-mapper"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Adeunis Mapper</a>
+	    </div>
+  	</div>
+</div>
 
-* [Agriculture](/use-the-network/community-projects#agricultural) 
-* [Dashboards](/use-the-network/community-projects#dashboards) 
-* [Environmental](/use-the-network/community-projects#environmental) 
-
-
-### Coverage Mapping
-
-* [Intro to Coverage Mappers](/use-the-network/coverage-mapping)
-* [Mappers Quickstart](/use-the-network/coverage-mapping/mappers-quickstart)
-* [Mappers Data](/use-the-network/coverage-mapping/mappers-data)
-* [Mappers API](/use-the-network/coverage-mapping/mappers-api)
-* [Adeunis Mapper](/use-the-network/coverage-mapping/adeunis-mapper)
