--- a/docs/use-the-network/devices/ready-to-use/victor-trap-v4xx.mdx
+++ b/docs/use-the-network/devices/ready-to-use/victor-trap-v4xx.mdx
@@ -19,6 +19,12 @@ Self Provisioning Guide for Victor Connected Rodent Control Devices
   )}
 />
 
+:::info
+
+If you need any help provisioning this sensor, please join the `#console` channel on [the Helium Discord Server](https://discord.gg/helium).
+
+:::
+
 ### Resources
 
 [Manual](https://www.vlinkhq.com/instructions/V450-V460-Vlink-User-Manual-US.pdf)
@@ -84,8 +90,18 @@ Search for the _VLINK Integration_ label and click _Add Label_ as shown below.
 />
 
 
+### Add Device to VLINK Platform 
+
+:::info
+
+You will need a VLINK account to finish the onboarding steps above. You should have received these account details when you purchased the device.
+
+:::
+
+
 You are now ready to add your device to VLINK and power on your device in range
 of a Hotspot. See VLINK onboarding instructions [here](https://helium-docs.s3-us-west-2.amazonaws.com/VLINK_Tunnel_Trap_Setup_Instructions.pdf).
+
 
 ### FAQ
 
