--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -4,6 +4,9 @@ hide_title: true
 sidebar_label: Consensus Protocol
 slug: /blockchain/consensus-protocol
 ---
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/consensus.png")} />
 
 # The Helium Consensus Protocol
 
