--- a/docs/blockchain/helium-token/helium-token.mdx
+++ b/docs/blockchain/helium-token/helium-token.mdx
@@ -5,6 +5,10 @@ sidebar_label: Helium Token
 slug: /blockchain/helium-token
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/heliumtoken.png")} />
+
 # The Helium Token
 
 The Helium Token is the native cryptocurrency and protocol token of the Helium
