--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -5,6 +5,10 @@ sidebar_label: Mining
 slug: /blockchain/mining
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/mining.png")} />
+
 # Mining and Token Rewards
 
 While there's no exact formula for for calculating how much `HNT` you'll earn
