--- a/docs/blockchain/oracles/oracles.mdx
+++ b/docs/blockchain/oracles/oracles.mdx
@@ -5,6 +5,10 @@ sidebar_label: Oracles
 slug: /blockchain/oracles
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/oracle.png")} />
+
 # HNT Price Oracles
 
 HNT coverts to Data Credits at a rate pegged to `$.00001` , and so the
