--- a/docs/blockchain/packet-purchasing/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing/packet-purchasing.mdx
@@ -4,6 +4,9 @@ hide_title: true
 sidebar_label: Packet Purchasing
 slug: /blockchain/packet-purchasing
 ---
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/packetpurchasing.png")} />
 
 # Packet Purchasing
 
