--- a/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
+++ b/docs/blockchain/proof-of-coverage/proof-of-coverage.mdx
@@ -4,6 +4,9 @@ hide_title: true
 sidebar_label: Proof of Coverage
 slug: /blockchain/proof-of-coverage
 ---
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/proofofcoverage.png")} />
 
 # Proof of Coverage
 
