--- a/docs/blockchain/transaction-fees/transaction-fees.mdx
+++ b/docs/blockchain/transaction-fees/transaction-fees.mdx
@@ -5,6 +5,10 @@ sidebar_label: Transaction Fees
 slug: /blockchain/transaction-fees
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/blockchain/fees.png")} />
+
 # Transaction Fees
 
 Like most blockchains, Helium has a system of transaction fees. All transactions
