--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -5,7 +5,12 @@ sidebar_label: Community
 slug: /community-governance
 ---
 
-## Community and Governance
+
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/community/community.png")} />
+
+# Community and Governance
 
 The Helium Community is the home to over tens of thousands developers and network operators who collaborate every day across the world to build the Helium Network. Any and all are welcome to take part. Join us!
 
