--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -5,11 +5,13 @@ sidebar_label: Overview
 slug: /open-source/open-source
 ---
 
+
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-<img src={useBaseUrl("img/open-source/oss.svg")} style={{width: 200}} />
+<img className="docsheader" src={useBaseUrl("img/open-source/opensource.png")} />
 
-## Helium is Open Source
+
+# Helium is Open Source
 
 The Helium Network is built almost entirely on open source code. And we actively
 encourage the community to develop and contribute to all parts of the Network.
