--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -11,7 +11,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 <div class="container" style={{padding: 0}}>
 	<div class="row">
-		<div class="col col--4">
+		<div class="col col--6">
+					<img className="docsheader docsheadersmall" src={useBaseUrl("img/home/docsheader.png")} />
 			<h1 className="bigger">Welcome to Helium</h1>
 			<h2 className="subtitle">Ready to be a part of the People's Network? Let's go!</h2>
 			{/* <a className="button" href="/">Quick start <img className="linkarrow" src={useBaseUrl("img/icons/linkarrowwhite.svg")} /></a> */}
@@ -23,8 +24,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 				<a href="/lorawan-on-helium"><span class="badge badge--secondary">LoRaWAN on Helium</span></a>
 			</div>
 		</div>
-		<div class="col col--8">
-			<img className="docsheader" src={useBaseUrl("img/home/docsheader.png")} />
+		<div class="col col--6">
+			<img className="docsheader docsheaderhome" src={useBaseUrl("img/home/docsheader.png")} />
 		</div>
 	</div>
 </div>
