Update validator pages

--- a/docs/mine-hnt/validators/setup.mdx
+++ b/docs/mine-hnt/validators/setup.mdx
@@ -6,7 +6,10 @@ sidebar_label: Run a Validator
 slug: /mine-hnt/validators/validator-run
 ---
 
+
 import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/validators/runvalidator.png")} />
 
 # Run a Validator
 
