--- a/docs/mine-hnt/validators/testtokens.mdx
+++ b/docs/mine-hnt/validators/testtokens.mdx
@@ -8,6 +8,9 @@ slug: /mine-hnt/validators/validator-tnt
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
+<img className="docsheader" src={useBaseUrl("img/validators/faucet.png")} />
+
+
 # Obtain Testnet Network Tokens (TNT)
 After your owner wallet is set up you need to obtain TNT used to stake the validator node.
 
