--- a/docs/mine-hnt/validators/validator-deployment-guide.mdx
+++ b/docs/mine-hnt/validators/validator-deployment-guide.mdx
@@ -8,6 +8,8 @@ slug: /mine-hnt/validators/validator-deployment-guide
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
+<img className="docsheader" src={useBaseUrl("img/mine-hnt/validators.png")} />
+
 # Validator Deployment Guide 
 
 This guide will cover the end-to-end process of deploying a Helium Validator. It assumes you're starting from scratch. At the end, you'll have a Helium Validator deployed on the Network.
@@ -89,7 +91,6 @@ The output will look similar to this:
 Note the `Balance | 0.00000000`.
 
 Sad? Yes. But don't fret. It's only temporary. The next step is to acquire some Testnet Tokens (TNT). Lucky for you, they are free. 
-
 
 ## Acquire TNT from the Testnet Faucet 
 
