--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -6,11 +6,19 @@ sidebar_label: Validators (Testnet)
 slug: /mine-hnt/validators
 ---
 
+
 import useBaseUrl from "@docusaurus/useBaseUrl";
+
+<img className="docsheader" src={useBaseUrl("img/mine-hnt/validators.png")} />
 
 # Validators (Testnet)
 
 Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain. 
+
+<img className="docsheader" style={{marginBottom: 30}} src={useBaseUrl("img/validators/schematic.png")} />
+
+
+## Before you Start...
 
 :::info
 
@@ -27,7 +35,7 @@ During the Testnet, expect frequent updates which could result in API and Faucet
 
 ## Deploy a Validator 
 
-Ready to deploy a Validator to the Testnet ? The [complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) will walk you through the entire process.
+Ready to deploy a Validator to the Testnet? The [complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) will walk you through the entire process.
 
 ## Validator Explorer
 
@@ -38,13 +46,15 @@ There is [a new Explorer for Validators](https://explorer.helium.wtf/validators)
 
 To run a Testnet Validator node refer to the following:
 
-* [Technical Requirements](/mine-hnt/validators/requirements)
-* [Configure Wallet](/mine-hnt/validators/validator-wallet)
-* [Obtain Testnet Network Tokens (TNT)](/mine-hnt/validators/validator-tnt)
-* [Run a Validator](/mine-hnt/validators/validator-run)
-* [Monitor a Validator](/mine-hnt/validators/validator-monitor)
-* [Troubleshooting](/mine-hnt/validators/validator-troubleshooting)
-* [Test Cases](/mine-hnt/validators/validator-testcases)
+<div>
+		    <a className="block" href="/mine-hnt/validators/requirements"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Technical Requirements</a>
+		    <a className="block" href="/mine-hnt/validators/validator-wallet"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Configure Wallet</a>
+		    <a className="block" href="/mine-hnt/validators/validator-tnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Obtain Testnet Network Tokens (TNT)</a>
+			<a className="block" href="mine-hnt/validators/validator-run"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a Validator</a>	
+			<a className="block" href="/mine-hnt/validators/validator-monitor)"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Monitor a Validator</a>	
+			<a className="block" href="/mine-hnt/validators/validator-troubleshooting"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Troubleshooting</a>	
+			<a className="block" href="/mine-hnt/validators/validator-testcases"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Test Cases</a>	
+</div>
 
 ## Testnet Overview and Design
 
