--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -39,7 +39,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
   	</div>
     <div class="col col--6">
     	<p>Interested in becoming a Hotspots Maker? Any qualified company can beapproved by the Helium community to manufacture and distribute Hotspots.</p>
-    	<p style={{marginBottom:50}}>Check out some of these quick links for help getting started or join us in the #gateway channel on <a href="https://discorg.gg/helium">our Discord</a>.</p>
+    	<p style={{marginBottom:50}}>Check out some of these quick links for help getting started or join us in the #gateway channel on <a href="https://discord.gg/helium">our Discord</a>.</p>
     </div>
       <div class="col col--5 col--offset-1 "  style={{marginBottom: 100}}>
 		    <h5 style={{marginTop:0}}>Quick Links</h5>
