--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -6,34 +6,41 @@ sidebar_label: Validators (Testnet)
 slug: /mine-hnt/validators
 ---
 
-
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 <img className="docsheader" src={useBaseUrl("img/mine-hnt/validators.png")} />
 
 # Validators (Testnet)
 
-Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain. 
+Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain.
 
-<img className="docsheader" style={{marginBottom: 30}} src={useBaseUrl("img/validators/schematic.png")} />
+<img
+  className="docsheader"
+  style={{ marginBottom: 20 }}
+  src={useBaseUrl("img/validators/schematic.png")}
+/>
 
+Before you start, there are a few items to review...
 
-## Before you Start...
+### Expectations for Running a Validator on Testnet
 
-:::info
+As Validators will play an important role in the expansion, stability and success of the Helium network moving forward, it's important to set expectations for running a Validator, especially during the Testnet process.
 
-Use the ```#validator``` channel on our [Discord](https://discord.gg/helium) server to take part in the real-time Validator development, provide feedback, and report issues.
+In participating in Testnet, the expectations are that you will:
+
+- Join the [Helium Discord](https://discord.gg/helium) server to take part in the real-time Validator development. Participate in the `#validator` channel, but more importantly subscribe to alerts in `#validators-announcements`. `#validators-announcements` will provide you with important, timely information for upgrades and feedback during this process.
+- Be attentive to upgrade the Validator software when requested through `#validators-announcements`. This may include tasks that will require you to delete & re-stake your Validator instance, or perform other tasks that will assist the team in bringing the best product to the network.
+- Be proficient in command-line driven linux-based operating systems, comfortable working with cloud based service providers (AWS, Azure, Linode, DigitalOcean, or GCP, etc.), comfortable with working with firewall rules / NAT and other basic networking components, and experienced in working with docker images and controls.
+
+The Helium team as well as the greater Helium community is continually attemping to make this process as clear and easy to understand as possible. However, during this time you can expect much change.
+
+:::warning
+
+If you do not feel you can meet these expectations, thats fine! It may be better to wait for the public availablity of validators. There will be future announcements on the availability of staking your own validator on mainnet.
 
 :::
 
-:::warning 
-
-During the Testnet, expect frequent updates which could result in API and Faucet service interruptions requiring node restarts.
-
-:::
-
-
-## Deploy a Validator 
+## Deploy a Validator
 
 Ready to deploy a Validator to the Testnet? The [complete Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) will walk you through the entire process.
 
@@ -41,26 +48,46 @@ Ready to deploy a Validator to the Testnet? The [complete Validator Deployment G
 
 There is [a new Explorer for Validators](https://explorer.helium.wtf/validators) being developed by Helium and the Community.
 
-
-## Validator Resources 
+## Validator Resources
 
 To run a Testnet Validator node refer to the following:
 
 <div>
-		    <a className="block" href="/mine-hnt/validators/requirements"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Technical Requirements</a>
-		    <a className="block" href="/mine-hnt/validators/validator-wallet"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Configure Wallet</a>
-		    <a className="block" href="/mine-hnt/validators/validator-tnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Obtain Testnet Network Tokens (TNT)</a>
-			<a className="block" href="mine-hnt/validators/validator-run"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a Validator</a>	
-			<a className="block" href="/mine-hnt/validators/validator-monitor)"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Monitor a Validator</a>	
-			<a className="block" href="/mine-hnt/validators/validator-troubleshooting"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Troubleshooting</a>	
-			<a className="block" href="/mine-hnt/validators/validator-testcases"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Test Cases</a>	
+  <a className="block" href="/mine-hnt/validators/requirements">
+    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+    Technical Requirements
+  </a>
+  <a className="block" href="/mine-hnt/validators/validator-wallet">
+    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+    Configure Wallet
+  </a>
+  <a className="block" href="/mine-hnt/validators/validator-tnt">
+    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Obtain
+    Testnet Network Tokens (TNT)
+  </a>
+  <a className="block" href="mine-hnt/validators/validator-run">
+    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a
+    Validator
+  </a>
+  <a className="block" href="/mine-hnt/validators/validator-monitor)">
+    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+    Monitor a Validator
+  </a>
+  <a className="block" href="/mine-hnt/validators/validator-troubleshooting">
+    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} />{" "}
+    Troubleshooting
+  </a>
+  <a className="block" href="/mine-hnt/validators/validator-testcases">
+    <img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Test
+    Cases
+  </a>
 </div>
 
 ## Testnet Overview and Design
 
 As stated above, we are currently running the Testnet. As such, a few things are slightly modified from what will eventually be Mainnet. Specifically:
 
-* Developers need Testnet Network Tokens (TNT) to stake test validator nodes. You can get them [via the Faucet](https://faucet.helium.wtf) but, before you do that, read the [Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) so you know how to use them.
-* The Testnet Consensus Group will be sized dynamically based on the number of active testnet participants. 
-* Testnet block production and epochs are accelerated. They are 10 second blocks and 10 minute epochs (mainnet targets 60 second blocks and 30 minute epochs).
-* The cooldown period - defined as the number of blocks after unstaking when the validator node doesn't earn rewards, and the stake is returned to the owner's wallet - is shortened to 360 blocks (or approximately 60 minutes). On mainnet this period will be closer to 200000 blocks. 
+- Developers need Testnet Network Tokens (TNT) to stake test validator nodes. You can get them [via the Faucet](https://faucet.helium.wtf) but, before you do that, read the [Validator Deployment Guide](/mine-hnt/validators/validator-deployment-guide) so you know how to use them.
+- The Testnet Consensus Group will be sized dynamically based on the number of active testnet participants.
+- Testnet block production and epochs are accelerated. They are 10 second blocks and 10 minute epochs (mainnet targets 60 second blocks and 30 minute epochs).
+- The cooldown period - defined as the number of blocks after unstaking when the validator node doesn't earn rewards, and the stake is returned to the owner's wallet - is shortened to 360 blocks (or approximately 60 minutes). On mainnet this period will be closer to 200,000 blocks (or approximately 5 months).
