--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -36,7 +36,7 @@ The Helium team as well as the greater Helium community is continually attemping
 
 :::warning
 
-If you do not feel you can meet these expectations, thats fine! It may be better to wait for the public availablity of validators. There will be future announcements on the availability of staking your own validator on mainnet.
+We understand that not everyone will be able to meet these expectations. It may be better to wait for the public availability of validators. There will be future announcements on the availability of staking your own validator on mainnet.
 
 :::
 
