docs: fix dead links
Fix dead links to validator run and validator monitor

Change-type: patch
Signed-off-by: Aaron Shaw <shawaj@gmail.com>

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -50,8 +50,8 @@ To run a Testnet Validator node refer to the following:
 		    <a className="block" href="/mine-hnt/validators/requirements"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Technical Requirements</a>
 		    <a className="block" href="/mine-hnt/validators/validator-wallet"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Configure Wallet</a>
 		    <a className="block" href="/mine-hnt/validators/validator-tnt"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Obtain Testnet Network Tokens (TNT)</a>
-			<a className="block" href="mine-hnt/validators/validator-run"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a Validator</a>	
-			<a className="block" href="/mine-hnt/validators/validator-monitor)"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Monitor a Validator</a>	
+			<a className="block" href="/mine-hnt/validators/validator-run"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Run a Validator</a>	
+			<a className="block" href="/mine-hnt/validators/validator-monitor"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Monitor a Validator</a>	
 			<a className="block" href="/mine-hnt/validators/validator-troubleshooting"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Troubleshooting</a>	
 			<a className="block" href="/mine-hnt/validators/validator-testcases"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Test Cases</a>	
 </div>
