--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -297,6 +297,68 @@ The hotspot list for an account
 
 ---
 
+## OUIs for Account
+
+```
+GET https://api.helium.io/v1/accounts/:address/ouis
+```
+
+Fetches OUIs owned by a given account address.The list of returned OUIs
+is paged. If a `cursor` field is present more results are available.
+
+<Tabs
+  block={true}
+  defaultValue="request"
+  values={[{"label":"Request","value":"request"},{"label":"Response","value":"response"}]}>
+<TabItem value="request">
+
+_Path Parameters_
+
+| param              | Type     | Note                                     |
+| ------------------ | -------- | ---------------------------------------- |
+| address (required) | _string_ | Account B58 address to fetch details for |
+
+_Query Parameters_
+
+| param             | Type     | Note                                          |
+| ----------------- | -------- | --------------------------------------------- |
+| cursor (optional) | _string_ | Cursor for the next page of hotspots to fetch |
+
+</TabItem>
+<TabItem value="response">
+
+200: OK
+
+The oui list for account `13tyMLKRFYURNBQqLSqNJg9k41maP1A7Bh8QYxR13oWv7EnFooc`
+
+```json
+{
+  "data": [
+    {
+      "subnets": [
+        {
+          "mask": 8388352,
+          "base": 0
+        }
+      ],
+      "owner": "13tyMLKRFYURNBQqLSqNJg9k41maP1A7Bh8QYxR13oWv7EnFooc",
+      "oui": 1,
+      "nonce": 0,
+      "block": 762440,
+      "addresses": [
+        "112qB3YaH5bZkCnKA5uRH7tBtGNv2Y5B4smv1jsmvGUzgKT71QpE"
+      ]
+    }
+  ]
+}
+```
+
+</TabItem>
+</Tabs>
+
+
+---
+
 ## Activity for Account
 
 ```
