--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -322,7 +322,7 @@ _Query Parameters_
 
 | param             | Type     | Note                                          |
 | ----------------- | -------- | --------------------------------------------- |
-| cursor (optional) | _string_ | Cursor for the next page of hotspots to fetch |
+| cursor (optional) | _string_ | Cursor for the next page of OUIs to fetch     |
 
 </TabItem>
 <TabItem value="response">
